发送坐标点

--- a/src/rm_decision/CMakeLists.txt
+++ b/src/rm_decision/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   roslib
+  actionlib
+  actionlib_msgs
 )
 
 # find_package(behaviortree_cpp)
