--- a/src/rm_decision/CMakeLists.txt
+++ b/src/rm_decision/CMakeLists.txt
@@ -9,24 +9,23 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   roslib
   actionlib
-  message_generation
   geometry_msgs
   actionlib_msgs
-  # rm_decision
+  rm_interfaces
 )
 
 # find_package(behaviortree_cpp)
 find_package(behaviortree_cpp)
 
-add_message_files(
-  FILES
-  SerialReceiveMsg.msg
-)
+# add_message_files(
+#   FILES
+#   SerialReceiveMsg.msg
+# )
 
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs
+# )
 
 
 catkin_package(
