增加时间判断

--- a/src/configure/dynamic_configure/serial.cfg
+++ b/src/configure/dynamic_configure/serial.cfg
@@ -7,6 +7,6 @@ gen = ParameterGenerator()
 
 gen.add("mode",  int_t, 0, "Mode", 0, 0, 6)
 gen.add("brood",  int_t, 0, "Mode", 600, 0, 600)
-
+gen.add("time",int_t,0,"Time",420,0,420)
 
 exit(gen.generate(PACKAGE, "serial_cfg", "Serial"))
