--- a/src/serial/package.xml
+++ b/src/serial/package.xml
@@ -48,6 +48,7 @@
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
+  <build_depend>configure</build_depend>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rm_decision</build_depend>
   <build_depend>roscpp</build_depend>
