--- a/src/configure/dynamic_configure/serial.cfg
+++ b/src/configure/dynamic_configure/serial.cfg
@@ -5,8 +5,10 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("mode",  int_t, 0, "Mode", 0, 0, 6)
-gen.add("brood",  int_t, 0, "Mode", 600, 0, 600)
+gen.add("game_status",  int_t, 0, "Mode", 0, 0, 1)
+gen.add("blood",  int_t, 0, "Mode", 600, 0, 600)
 gen.add("time",int_t,0,"Time",420,0,420)
+gen.add("outpose_HP",int_t,0,"outpose_HP",1000,0,1000)
+
 
 exit(gen.generate(PACKAGE, "serial_cfg", "Serial"))
